workloads/litmusdocs.yaml
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: litmusdoc
  namespace: litmus
  annotations:
    flux.weave.works/automated: 'true'
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: litmusdoc
    spec:
      containers:
      - name: litmusdoc
        image: mayadataio/litmus-docs:master-9415dd
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: mayadatasecret2
