workloads/litmusdocs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: litmusdoc
  name: litmusdoc-service
  namespace: litmus-doc
spec:
  ports:
  - name: litmusdoc
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer    
  selector:
    app: litmusdoc
