workloads/staging-litmus-openebs-docs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stage-litmus-openebs-docs
  name: stage-litmus-openebs-docs-svc
  namespace: default
spec:
  ports:
  - name: stage-litmus-openebs-docs
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: stage-litmus-openebs-docs
