workloads/staging-litmus-openebs-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    flux.weave.works/automated: "true"
  name: stage-litmus-openebs-docs
  namespace: litmus-doc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stage-litmus-openebs-docs
  template:
    metadata:
      labels:
        app : stage-litmus-openebs-docs
    spec:
      containers:
        - name: stage-litmus-openebs-docs
          image: shubh214/litmus-openebs-docs:1.1.18
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stage-litmus-openebs-docs
  name: stage-litmus-openebs-docs-svc
  namespace: litmus-doc
spec:
  ports:
  - name: stage-litmus-openebs-docs
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer    
  selector:
    app: stage-litmus-openebs-docs
