workloads/staging-litmusdocs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: staging-litmusdoc
  name: staging-litmusdoc-service
  namespace: litmus-doc
spec:
  ports:
  - name: staging-litmusdoc
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer    
  selector:
    app: staging-litmusdoc
