workloads/testing-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: litmus-doc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
